update dynamic article
